refactor(BaseLayout): format GridPattern component for improved readability

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,12 @@ const { ...head } = Astro.props;
   </head>
   <body class="h-full min-h-dvh bg-background font-sans antialiased relative">
     <Header />
-    <GridPattern className="z-0" width={40} height={40} />
+    <GridPattern
+      width={40}
+      height={40}
+      strokeDasharray={"4 2"}
+      className="z-0"
+    />
     <slot />
   </body>
 </html>
