--- a/src/components/Quotes.astro
+++ b/src/components/Quotes.astro
@@ -1,8 +1,8 @@
 ---
-import { Card, CardContent, CardHeader, CardTitle } from "@/components/ui/card";
+import { Card, CardContent } from "@/components/ui/card";
 ---
 
-<Card className="p-8 xl:col-span-4">
+<Card className="p-8 md:col-span-2 xl:col-span-4">
   <CardContent
     className="text-xl font-medium tracking-tight text-primary md:text-3xl"
   >
