--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,7 +5,7 @@ import { siteConfig } from "@/site.config";
 import { Mail } from "lucide-react";
 ---
 
-<Card className="p-8 lg:col-span-2 xl:col-span-4">
+<Card className="p-8 md:col-span-2 lg:col-span-4">
   <CardHeader>
     <CardTitle
       className="text-center text-xl font-medium tracking-tight text-primary md:text-6xl"
