--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { siteConfig } from "@/site.config";
 
 <BaseLayout title={siteConfig.name} description={siteConfig.description}>
   <main class="relative flex-auto p-4">
-    <div class="grid grid-cols-1 gap-4 lg:grid-cols-2 xl:grid-cols-4">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
       <About />
       <FindMe />
       <TimeZone />
