fix: adjust font sizes for consistency across FindMe, Gallery, Projects, and TimeZone components

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -31,7 +31,7 @@ const getAltFromPath = (path: string) => {
 <Card className="p-8 md:col-span-2 lg:col-span-4">
   <CardHeader>
     <CardTitle
-      className="text-xl font-medium tracking-tight text-primary md:text-6xl"
+      className="text-2xl font-medium tracking-tight text-primary md:text-6xl"
     >
       Gallery
     </CardTitle>
