--- a/src/components/TimeZone.astro
+++ b/src/components/TimeZone.astro
@@ -10,7 +10,9 @@ import {
 
 <Card className="p-8 text-center lg:text-left">
   <CardHeader>
-    <CardTitle className="text-xl tracking-tight text-primary lg:text-7xl">
+    <CardTitle
+      className="text-xl font-medium tracking-tight text-primary lg:text-6xl"
+    >
       Time Zone
     </CardTitle>
     <CardDescription className="mt-4 text-sm lg:text-xl">
