--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const currentYear = new Date().getFullYear();
 import { Card, CardFooter } from "@/components/ui/card";
 ---
 
-<Card className="justify-end p-8 md:col-span-2 lg:col-span-4">
+<Card className="justify-end md:col-span-2 lg:col-span-4">
   <CardFooter className="text-primary">
     &copy; {currentYear} Long Nhat Nguyen
   </CardFooter>
