--- a/src/components/TimeZone.astro
+++ b/src/components/TimeZone.astro
@@ -8,7 +8,7 @@ import {
 } from "@/components/ui/card";
 ---
 
-<Card className="p-8 text-center lg:text-left">
+<Card className="text-center lg:text-left">
   <CardHeader>
     <CardTitle
       className="text-xl font-medium tracking-tight text-primary lg:text-6xl"
