--- a/src/components/FindMe.astro
+++ b/src/components/FindMe.astro
@@ -54,7 +54,7 @@ const socialLinks = [
 ];
 ---
 
-<Card className="p-8">
+<Card>
   <CardHeader className="w-full">
     <CardTitle
       className="text-xl font-normal tracking-tight text-primary lg:text-6xl"
@@ -64,7 +64,7 @@ const socialLinks = [
   </CardHeader>
   <CardContent className="w-full">
     <div
-      class="mt-4 grid w-full grid-cols-5 justify-center gap-4 md:grid-cols-10 lg:grid-cols-5"
+      class="mt-4 grid grid-cols-5 w-full justify-center gap-4 md:grid-cols-10 lg:grid-cols-5"
     >
       {
         (() => {
