--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -28,7 +28,7 @@ const getAltFromPath = (path: string) => {
 };
 ---
 
-<Card className="p-8 md:col-span-2 lg:col-span-4">
+<Card className="md:col-span-2 lg:col-span-4">
   <CardHeader>
     <CardTitle
       className="text-2xl font-medium tracking-tight text-primary md:text-6xl"
