--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -28,10 +28,10 @@ const getAltFromPath = (path: string) => {
 };
 ---
 
-<Card className="p-8 lg:col-span-2 xl:col-span-4">
+<Card className="md:col-span-2 lg:col-span-4">
   <CardHeader>
     <CardTitle
-      className="text-xl font-medium tracking-tight text-primary md:text-6xl"
+      className="text-2xl font-medium tracking-tight text-primary md:text-6xl"
     >
       Gallery
     </CardTitle>
