--- a/src/components/Quotes.astro
+++ b/src/components/Quotes.astro
@@ -2,7 +2,7 @@
 import { Card, CardContent } from "@/components/ui/card";
 ---
 
-<Card className="p-8 md:col-span-2 xl:col-span-4">
+<Card className="md:col-span-2 lg:col-span-4">
   <CardContent
     className="text-xl font-medium tracking-tight text-primary md:text-3xl"
   >
