--- a/src/components/TimeZone.astro
+++ b/src/components/TimeZone.astro
@@ -8,9 +8,11 @@ import {
 } from "@/components/ui/card";
 ---
 
-<Card className="p-8 text-center lg:text-left">
+<Card className="text-center lg:text-left">
   <CardHeader>
-    <CardTitle className="text-xl tracking-tight text-primary lg:text-7xl">
+    <CardTitle
+      className="text-xl font-medium tracking-tight text-primary lg:text-6xl"
+    >
       Time Zone
     </CardTitle>
     <CardDescription className="mt-4 text-sm lg:text-xl">
