--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Contact from "@/components/Contact.astro";
 import FindMe from "@/components/FindMe.astro";
 import Footer from "@/components/Footer.astro";
 import Gallery from "@/components/Gallery.astro";
-import { Projects } from "@/components/Projects";
+import Projects from "@/components/Projects";
 import Quotes from "@/components/Quotes.astro";
 import TimeZone from "@/components/TimeZone.astro";
 import BaseLayout from "@/layouts/BaseLayout.astro";
