--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
-import About from "@/components/About.astro";
-import Contact from "@/components/Contact.astro";
-import FindMe from "@/components/FindMe.astro";
-import Footer from "@/components/Footer.astro";
-import Gallery from "@/components/Gallery.astro";
-import Projects from "@/components/Projects";
-import Quotes from "@/components/Quotes.astro";
-import TimeZone from "@/components/TimeZone.astro";
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import About from "@/components/About.astro";
+import FindMe from "@/components/FindMe.astro";
+import TimeZone from "@/components/TimeZone";
+import Projects from "@/components/Projects";
+import Gallery from "@/components/Gallery.astro";
+import Quotes from "@/components/Quotes.astro";
+import Contact from "@/components/Contact.astro";
+import Footer from "@/components/Footer.astro";
 
 import { siteConfig } from "@/site.config";
 ---
