--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import { siteConfig } from "@/site.config";
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
       <About />
       <FindMe />
-      <LocalTime client:load />
+      <LocalTime client:idle />
       <Projects />
       <Gallery />
       <Quotes />
