Refactor component styles and layout structure
- Updated text sizes and font weights in About, FindMe, Gallery, LocalTime, and Projects components for consistency.
- Adjusted layout structure in BaseLayout, 404, and index pages to improve semantic HTML and accessibility.
- Removed unnecessary <main> tags in 404 and index pages, replacing them with <div> for better layout control.

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -31,7 +31,7 @@ const getAltFromPath = (path: string) => {
 <Card className="md:col-span-2 lg:col-span-4">
   <CardHeader>
     <CardTitle
-      className="text-2xl font-medium tracking-tight text-primary md:text-6xl"
+      className="text-2xl font-normal tracking-tight text-primary md:text-4xl lg:text-6xl"
     >
       Gallery
     </CardTitle>
