--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -19,7 +19,7 @@ import { Card, CardContent, CardHeader } from "@/components/ui/card";
   </CardHeader>
   <CardContent>
     <p
-      class="mt-6 text-3xl font-medium tracking-tight text-primary lg:text-4xl"
+      class="text-2xl font-medium tracking-tight text-primary md:text-4xl lg:text-4xl"
     >
       Hello humans,
     </p>
