--- a/src/components/FindMe.astro
+++ b/src/components/FindMe.astro
@@ -57,7 +57,7 @@ const socialLinks = [
 <Card>
   <CardHeader className="w-full">
     <CardTitle
-      className="text-xl font-normal tracking-tight text-primary lg:text-6xl"
+      className="text-2xl font-normal tracking-tight text-primary md:text-4xl lg:text-6xl"
     >
       Find me on
     </CardTitle>
