--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -38,9 +38,10 @@ const resolvedImage = {
 <meta name="theme-color" content={themeColor} />
 
 <!-- Low-Priority Metadata -->
-<link rel="mask-icon" href={`${Astro.site}favicon.svg`} color={themeColor} />
-<link rel="sitemap" href={`${Astro.site}sitemap-index.xml`} />
-<link rel="alternate" type="application/rss+xml" href={`${Astro.site}rss.xml`} title="RSS" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+<link rel="mask-icon" href="/favicon.svg" color={themeColor} />
+<link rel="sitemap" href="/sitemap-index.xml" />
+<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="RSS" />
 
 <!-- SEO & Social Sharing -->
 <SEO
