--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -14,17 +14,19 @@ import { siteConfig } from "@/site.config";
     </CardTitle>
   </CardHeader>
 
-  <CardContent className="flex gap-2">
-    <Button>
-      <a
-        aria-label="Nhat Nguyen's Email"
-        target="_blank"
-        rel="noopener noreferrer"
-        href={`mailto:${siteConfig.links.email}`}
-      >
-        <Mail class="mr-2 size-4 pr-2" />
-        Email
-      </a>
-    </Button>
+  <CardContent>
+    <div class="flex gap-2">
+      <Button>
+        <a
+          aria-label="Nhat Nguyen's Email"
+          target="_blank"
+          rel="noopener noreferrer"
+          href={`mailto:${siteConfig.links.email}`}
+        >
+          <Mail class="mr-2 size-4 pr-2" />
+          Email
+        </a>
+      </Button>
+    </div>
   </CardContent>
 </Card>
