--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -14,7 +14,7 @@ import { siteConfig } from "@/site.config";
     </CardTitle>
   </CardHeader>
 
-  <CardContent className="flex flex-row gap-2">
+  <CardContent className="flex justify-center">
     <a
       aria-label="Nhat Nguyen's Email"
       target="_blank"
