--- a/src/components/FindMe.astro
+++ b/src/components/FindMe.astro
@@ -46,7 +46,7 @@ const socialLinks = [
           target="_blank"
           rel="noopener noreferrer"
           href={href}
-          class={buttonVariants({ variant: "ghost", size="icon" })}
+          class={buttonVariants({ variant: "ghost", size: "icon" })}
         >
           <Icon className="size-6" />
           <span class="sr-only">{name}</span>
