--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,6 +1,6 @@
 ---
 import { Mail } from "lucide-react";
-import { Button } from "@/components/ui/button";
+import { buttonVariants } from "@/components/ui/button";
 import { Card, CardContent, CardHeader, CardTitle } from "@/components/ui/card";
 import { siteConfig } from "@/site.config";
 ---
@@ -13,16 +13,17 @@ import { siteConfig } from "@/site.config";
       Send me <span class="lg:block">a letter</span>
     </CardTitle>
   </CardHeader>
-  <CardContent className="flex flex-col items-center justify-center space-y-4">
+
+  <CardContent className="flex justify-center">
     <a
-      aria-label="Nhat Nguyen's Gmail"
+      aria-label="Nhat Nguyen's Email"
       target="_blank"
       rel="noopener noreferrer"
       href={`mailto:${siteConfig.links.email}`}
+      class={buttonVariants({ variant: "secondary" })}
     >
-      <Button>
-        <Mail className="mr-2 size-4" />Email
-      </Button>
+      <Mail className="mr-2 size-4" />
+      Email
     </a>
   </CardContent>
 </Card>
