--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,11 @@
 ---
 const currentYear = new Date().getFullYear();
 
-import { Card, CardFooter } from "@/components/ui/card";
+import { Card, CardContent } from "@/components/ui/card";
 ---
 
 <Card className="justify-end md:col-span-2 lg:col-span-4">
-  <CardFooter className="text-primary">
+  <CardContent className="text-primary">
     &copy; {currentYear} Long Nhat Nguyen
-  </CardFooter>
+  </CardContent>
 </Card>
